--- a/src/sass/blocks/style.scss
+++ b/src/sass/blocks/style.scss
@@ -12,3 +12,5 @@
 @import '../blocks/title';
 @import '../blocks/_consultation';
 @import '../blocks/forms';
+@import '../blocks/_carousel';
+@import '../blocks/_catalog';
