--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -40,12 +40,12 @@
         display: none;
         justify-content: space-between;
         flex-wrap: wrap;
-        margin-right: 20px;
         &_active {
             display: flex;
         }
     }
     &-item {
+        margin: 0 50px 20px 50px;
         width: 300px;
         min-height: 440px;
         border: 2px solid #e8e8e8;
@@ -135,7 +135,7 @@
                 transform: translateX(-100%);
                 margin-left: 0px;
             }
-            li {
+            p {
                 position: relative;
                 color: #555555;
                 font-size: 14px;
