--- a/src/sass/blocks/style.scss
+++ b/src/sass/blocks/style.scss
@@ -8,9 +8,14 @@
 @import '../blocks/header';
 @import '../blocks/buttons';
 @import '../blocks/advantages';
-@import '../base/media';
 @import '../blocks/title';
 @import '../blocks/_consultation';
 @import '../blocks/forms';
 @import '../blocks/_carousel';
 @import '../blocks/_catalog';
+@import '../blocks/footer';
+@import '../blocks/reviews';
+@import '../blocks/__modal';
+@import '../blocks/_pageup';
+@import '../base/animations';
+@import '../base/media';
